feat: implementa auth publico essencial e corrige rodape
