# backend/src/main/java/br/com/topsdojob/v3/application/publico/auth/dto/PublicDuplicidadeDto.java
@@ -1,0 +1,7 @@
+package br.com.topsdojob.v3.application.publico.auth.dto;
+
+public record PublicDuplicidadeDto(
+        boolean emailExistente,
+        boolean usernameExistente,
+        boolean telefoneExistente) {
+}
