# backend/src/main/java/br/com/topsdojob/v3/application/publico/auth/dto/PublicRegisterRequestDto.java
@@ -1,0 +1,13 @@
+package br.com.topsdojob.v3.application.publico.auth.dto;
+
+public record PublicRegisterRequestDto(
+        String username,
+        String email,
+        String telefone,
+        String dataNascimento,
+        String senha,
+        String confirmarSenha,
+        Boolean acceptedTermsOfUse,
+        Boolean acceptedPrivacyPolicy,
+        Boolean acceptedPromotionalEmails) {
+}
