# backend/src/main/java/br/com/topsdojob/v3/application/publico/auth/dto/PublicUserDto.java
@@ -1,0 +1,14 @@
+package br.com.topsdojob.v3.application.publico.auth.dto;
+
+import java.util.UUID;
+
+public record PublicUserDto(
+        boolean autenticado,
+        UUID id,
+        String username,
+        String nomeCompleto,
+        String email,
+        String telefone,
+        String status,
+        String cargo) {
+}
